# inverted-index-example

./: Cargo.toml  README.md
src/: main.rs
src/index/: inverted_index.rs
